--- a/menures2.css
+++ b/menures2.css
@@ -5,7 +5,7 @@ body{
 }
 nav{
 	width: 100%;
-	background: #202c45;
+	background: #6C63FF;
 	padding: 0 50px;
 	box-sizing: border-box;
 }
@@ -37,11 +37,11 @@ nav ul li a{
 	text-decoration: none;
 }
 nav ul li:hover{
-	background: #f2184f;
+	background: #FF7043;
 }
 .responsive-bar{
 	width: 100%;
-	background: #202c45;
+	background: #6C63FF;
 	padding: 10px 30px;
 	box-sizing: border-box;
 	display: none;
@@ -65,7 +65,7 @@ h4{
 	color: #fff;
 	float: right;
 	padding: 5px 10px;
-	background: #f2184f;
+	background: #FF7043;
 	font-size: 15px;
 	cursor: pointer;
 	
@@ -91,7 +91,7 @@ h4{
 	nav ul li {
 		display: block;
 		text-align: center;
-		background: #141e33;
+		background:  #6C63FF;
 		padding: 15px 20px;
 		border-bottom: 1px solid rgba(255,255,255,.1);
 	}
